--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ines (141 sloc) 4.33 KB
 <!DOCTYPE html>
 <html lang="cn">
 <head>
@@ -146,6 +147,9 @@
                 <div class="menu-td" id="7" onclick="myToggle('7')">医疗</div>
                 <div class="menu-td" id="8" onclick="myToggle('8')">新零售</div>
                 <div class="menu-td" id="9" onclick="myToggle('9')">S线</div>
+            </div>
+            <div class="menu-row">
+                <div class="menu-td" id="10" onclick="myToggle('10')">领军人</div>
             </div>
         </div>
         <label>计算结果：<input id="result" value="0"></label>
