因为分类已经更新了，进行更新数据

--- a/index.html
+++ b/index.html
@@ -135,20 +135,22 @@ ines (141 sloc) 4.33 KB
         <div class="menu-table">
             <div class="menu-row">
                 <div class="menu-td" id="1" onclick="myToggle('1')">云产品</div>
-                <div class="menu-td" id="2" onclick="myToggle('2')">销售</div>
+                <div class="menu-td" id="2" onclick="myToggle('2')">广告</div>
                 <div class="menu-td" id="3" onclick="myToggle('3')">内容</div>
             </div>
             <div class="menu-row">
-                <div class="menu-td" id="4" onclick="myToggle('4')">芯片</div>
-                <div class="menu-td" id="5" onclick="myToggle('5')">金融</div>
-                <div class="menu-td" id="6" onclick="myToggle('6')">教育</div>
+                <div class="menu-td" id="4" onclick="myToggle('4')">生态</div>
+                <div class="menu-td" id="5" onclick="myToggle('5')">芯片</div>
+                <div class="menu-td" id="6" onclick="myToggle('6')">销售</div>
             </div>
             <div class="menu-row">
-                <div class="menu-td" id="7" onclick="myToggle('7')">医疗</div>
-                <div class="menu-td" id="8" onclick="myToggle('8')">新零售</div>
-                <div class="menu-td" id="9" onclick="myToggle('9')">S线</div>
+                <div class="menu-td" id="7" onclick="myToggle('7')">金融</div>
+                <div class="menu-td" id="8" onclick="myToggle('8')">教育</div>
+                <div class="menu-td" id="9" onclick="myToggle('9')">医疗</div>
             </div>
             <div class="menu-row">
+                <div class="menu-td" id="10" onclick="myToggle('10')">新零售</div>
+                <div class="menu-td" id="10" onclick="myToggle('11')">S线</div>
                 <div class="menu-td" id="10" onclick="myToggle('10')">领军人</div>
             </div>
         </div>
