--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-ines (141 sloc) 4.33 KB
 <!DOCTYPE html>
 <html lang="cn">
 <head>
@@ -152,6 +151,9 @@ ines (141 sloc) 4.33 KB
                 <div class="menu-td" id="10" onclick="myToggle('10')">新零售</div>
                 <div class="menu-td" id="11" onclick="myToggle('11')">S线</div>
                 <div class="menu-td" id="12" onclick="myToggle('12')">领军人</div>
+            </div>
+            <div class="menu-row">
+                <div class="menu-td" id="13" onclick="myToggle('13')">解决方案</div>
             </div>
         </div>
         <label>计算结果：<input id="result" value="0"></label>
