--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             </div>
             <div class="menu-row">
                 <div class="menu-td" id="13" onclick="myToggle('13')">解决方案</div>
+                <div class="menu-td" id="14" onclick="myToggle('14')">碳中和</div>
             </div>
         </div>
         <label>计算结果：<input id="result" value="0"></label>
