--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             <div class="menu-row">
                 <div class="menu-td" id="13" onclick="myToggle('13')">解决方案</div>
                 <div class="menu-td" id="14" onclick="myToggle('14')">碳中和</div>
+                <div class="menu-td" id="15" onclick="myToggle('15')">安全</div>
             </div>
         </div>
         <label>计算结果：<input id="result" value="0"></label>
